--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project2"
         tools:targetApi="31">
+
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- MainActivity2 -->
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+
+        <!-- RecipeFeedActivity -->
+        <activity
+            android:name=".RecipeFeedActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
