--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -13,27 +14,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project2"
         tools:targetApi="31">
-
+        <activity
+            android:name=".RecipeDetailsActivity"
+            android:exported="false" />
         <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- MainActivity2 -->
+        </activity> <!-- MainActivity2 -->
         <activity
             android:name=".MainActivity2"
-            android:exported="false" />
-
-        <!-- RecipeFeedActivity -->
+            android:exported="false" /> <!-- RecipeFeedActivity -->
         <activity
             android:name=".RecipeFeedActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
